# Venice-AI-SDK

./: .gitignore  CHANGELOG.md  COMPREHENSIVE_AUDIT_ISSUE.md  ISSUE_VERIFICATION.md  LICENSE  README.md  Venice-AI-API-Docs.md  Venice-AI-Python-SDK-Plan.md  check_models.py  get_available_models.py  issue-15-closed-comment.md  issue-15-proposed-solution.md  issue-22-proposed-solution.md  issue-30-proposed-solution.md  issue-48-comment.md  issue-49-investigation.md  issue-49-solution.md  issue-50-comment.md  issue-51-comment.md  issue-52-comment.md  issue-53-comment.md  issue-54-comment.md  issue-55-investigation.md  issue-close-comment.md  mkdocs.yml  pyproject.toml  test_all_endpoints.py  test_connection_error.py  test_correct_endpoints.py  test_corrected_endpoints.py  test_documented_endpoints.py  test_embeddings_models.py  test_endpoints.py  test_image_endpoints.py  test_image_post_endpoints.py  test_more_endpoints.py
docs/: best_practices.md  configuration.md  index.md  installation.md  quickstart.md
docs/advanced/: error_handling.md  function_calling.md  streaming.md
docs/api/: account.md  audio.md  chat.md  client.md  errors.md  images.md  models.md  video.md
docs/dev/: Venice-AI-API-Docs.md  Venice-AI-Python-SDK-Plan.md  Venice-AI-SDK-100-Percent-Coverage-Plan.md
examples/: README.md  basic_chat.py  complete_api_demo.py  quick_start.py
examples/advanced/: advanced_parameters.py  ai_assistant.py  image_processing_pipeline.py  streaming_chat.py
examples/integrations/: web_app.py
examples/tutorials/: function_calling.py  getting_started.py
live-test/: README.md  test_chat_completion.py  test_config_and_errors.py  test_error_handling.py  test_models.py
site/: 404.html  index.html  sitemap.xml
site/advanced/error_handling/: index.html
site/advanced/function_calling/: index.html
site/advanced/streaming/: index.html
site/api/chat/: index.html
site/api/client/: index.html
site/api/errors/: index.html
site/api/models/: index.html
site/configuration/: index.html
site/contributing/: index.html
site/installation/: index.html
site/quickstart/: index.html
site/search/: search_index.json
tests/: conftest.py  test_chat.py  test_cli.py  test_client.py  test_config.py  test_errors.py  test_models.py  test_rate_limit.py  test_utils.py
tests/e2e/: test_workflow_e2e.py
tests/integration/: __init__.py  test_api_integration.py  test_cross_module_integration.py
tests/live/: __init__.py  test_account_live.py  test_audio_live.py  test_characters_live.py  test_chat_live.py  test_cli_live.py  test_client_live.py  test_config_live.py  test_embeddings_live.py  test_images_live.py  test_models_advanced_live.py  test_models_live.py  test_runner.py  test_utils.py  test_venice_client_live.py
tests/unit/: __init__.py  test_account_api.py  test_account_comprehensive.py  test_audio_comprehensive.py  test_characters_comprehensive.py  test_chat_comprehensive.py  test_cli_comprehensive.py  test_client_comprehensive.py  test_config_comprehensive.py  test_embeddings_comprehensive.py  test_endpoints.py  test_errors_comprehensive.py  test_images_comprehensive.py  test_models.py  test_models_advanced_comprehensive.py  test_models_comprehensive.py  test_utils_comprehensive.py  test_venice_client_comprehensive.py  test_video_comprehensive.py
venice_sdk/: __init__.py  _http.py  account.py  audio.py  characters.py  chat.py  cli.py  client.py  config.py  embeddings.py  endpoints.py  errors.py  images.py  logging_config.py  metrics.py  models.py  models_advanced.py  utils.py  venice_client.py  video.py
