[project]
name = "venice-sdk"
version = "0.1.0"
description = "A Python SDK for the Venice AI API"
readme = "README.md"
requires-python = ">=3.8"
license = "CC-BY-SA-4.0"
authors = [
    { name = "Mark Rizzn Hopkins", email = "guesswho@rizzn.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: CC-BY-SA-4.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.5.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/venice-sdk"
Documentation = "https://venice-sdk.readthedocs.io"
Repository = "https://github.com/yourusername/venice-sdk.git"
Issues = "https://github.com/yourusername/venice-sdk/issues"
Changelog = "https://github.com/yourusername/venice-sdk/blob/main/CHANGELOG.md"

[project.scripts]
venice = "venice_sdk.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.31.0.0"
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings>=0.22.0"
]
publish = [
    "twine>=4.0.0",
    "build>=0.10.0"
]

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=venice_sdk --cov-report=term-missing" 